--- a/src/gui/SellerForm.fxml
+++ b/src/gui/SellerForm.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -10,51 +11,49 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane prefHeight="174.0" prefWidth="562.0"
-	xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1"
-	fx:controller="gui.SellerFormController">
+<AnchorPane prefHeight="290.0" prefWidth="532.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.SellerFormController">
 	<children>
-		<GridPane layoutX="6.0" layoutY="14.0" prefHeight="142.0"
-			prefWidth="530.0" AnchorPane.leftAnchor="20.0"
-			AnchorPane.topAnchor="20.0">
+		<GridPane layoutX="23.0" layoutY="14.0" prefHeight="274.0" prefWidth="509.0" AnchorPane.leftAnchor="23.0" AnchorPane.topAnchor="14.0">
 			<columnConstraints>
-				<ColumnConstraints hgrow="SOMETIMES"
-					maxWidth="206.0" minWidth="10.0" prefWidth="80.0" />
-				<ColumnConstraints hgrow="SOMETIMES"
-					maxWidth="332.0" minWidth="10.0" prefWidth="278.0" />
-				<ColumnConstraints hgrow="SOMETIMES"
-					maxWidth="270.0" minWidth="10.0" prefWidth="270.0" />
+				<ColumnConstraints hgrow="SOMETIMES" maxWidth="206.0" minWidth="10.0" prefWidth="82.0" />
+				<ColumnConstraints hgrow="SOMETIMES" maxWidth="332.0" minWidth="10.0" prefWidth="225.0" />
+				<ColumnConstraints hgrow="SOMETIMES" maxWidth="270.0" minWidth="10.0" prefWidth="215.0" />
 			</columnConstraints>
 			<rowConstraints>
-				<RowConstraints minHeight="10.0" prefHeight="30.0"
-					vgrow="SOMETIMES" />
-				<RowConstraints maxHeight="56.0" minHeight="10.0"
-					prefHeight="56.0" vgrow="SOMETIMES" />
-				<RowConstraints maxHeight="42.0" minHeight="10.0"
-					prefHeight="38.0" vgrow="SOMETIMES" />
+				<RowConstraints maxHeight="55.0" minHeight="10.0" prefHeight="44.0" vgrow="SOMETIMES" />
+				<RowConstraints maxHeight="70.0" minHeight="10.0" prefHeight="44.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="68.0" minHeight="0.0" prefHeight="44.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="84.0" minHeight="0.0" prefHeight="44.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="56.0" minHeight="4.0" prefHeight="44.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="51.0" minHeight="10.0" prefHeight="44.0" vgrow="SOMETIMES" />
+				<RowConstraints maxHeight="50.0" minHeight="0.0" prefHeight="44.0" vgrow="SOMETIMES" />
 			</rowConstraints>
 			<children>
 				<Label text="Id" />
 				<Label text="Name" GridPane.rowIndex="1" />
-				<TextField fx:id="txtId" editable="false"
-					GridPane.columnIndex="1" />
-				<TextField fx:id="txtName" GridPane.columnIndex="1"
-					GridPane.rowIndex="1" />
-				<Label fx:id="labelErrorName" textFill="RED"
-					GridPane.columnIndex="2" GridPane.rowIndex="1">
+				<TextField fx:id="txtId" editable="false" GridPane.columnIndex="1" />
+				<TextField fx:id="txtName" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+				<Label fx:id="labelErrorName" textFill="RED" GridPane.columnIndex="2" GridPane.rowIndex="1">
 					<GridPane.margin>
 						<Insets left="5.0" />
 					</GridPane.margin>
 				</Label>
-				<HBox prefHeight="100.0" prefWidth="200.0" spacing="5.0"
-					GridPane.columnIndex="1" GridPane.rowIndex="2">
+				<HBox prefHeight="100.0" prefWidth="200.0" spacing="5.0" GridPane.columnIndex="1" GridPane.rowIndex="6">
 					<children>
-						<Button fx:id="btSave" mnemonicParsing="false"
-							onAction="#onBtSaveAction" text="Save" />
-						<Button fx:id="btCancel" mnemonicParsing="false"
-							onAction="#onBtCancelAction" text="Cancel" />
+						<Button fx:id="btSave" mnemonicParsing="false" onAction="#onBtSaveAction" text="Save" />
+						<Button fx:id="btCancel" mnemonicParsing="false" onAction="#onBtCancelAction" text="Cancel" />
 					</children>
 				</HBox>
+            <Label text="Email" GridPane.rowIndex="2" />
+            <Label text="Birth Date" GridPane.rowIndex="3" />
+            <Label text="Base Salary" GridPane.rowIndex="4" />
+            <Label text="Department" GridPane.rowIndex="5" />
+            <TextField fx:id="txtEmail" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="txtBaseSalary" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <DatePicker fx:id="dpBirthDate" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <Label fx:id="labelErrorEmail" textFill="RED" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+            <Label fx:id="labelErrorBirthDate" textFill="RED" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+            <Label fx:id="labelErrorBaseSalary" textFill="RED" GridPane.columnIndex="2" GridPane.rowIndex="4" />
 			</children>
 		</GridPane>
 		<HBox prefHeight="100.0" prefWidth="200.0" />
